Navbar UI changed.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     border: 0;
     padding: 0;
@@ -9,7 +9,7 @@
 .navbar {
     min-height: 150px;
     max-width: 100%;
-   /* background-color: black;*/
+   /* background-color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -64,6 +64,185 @@ ul li a:hover {
 }
 
 
+
+h1 {
+    color: black;
+    text-align: center;
+    font-size: 90px;
+}
+
+lucky {
+    color: deeppink;
+    font-size: 100px;
+    font-weight: 1000;
+    font-variant: small-caps;
+    letter-spacing: 1.5px;
+} */
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style:none;
+    box-sizing: border-box;
+}
+body{
+    font-family: montserrat;
+}
+nav{
+    background: #3606f6;
+    height: 80px;
+    width: 100%;
+}
+label.logo{
+    color:white;
+    font-size: 35px;
+    line-height:80px;
+     padding: 0 100px;
+     font-weight: bold; 
+}
+nav ul{
+    float:right;
+    margin-right: 20px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+nav ul li a{
+    color:white;
+    font-size:17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
+a.active,a:hover{
+    background:#77c2dc;
+        transition: .5s;
+    }
+    .checkbtn{
+        font-size:30px;
+        color:white;
+        float:right;
+        line-height:80px;
+        margin-right: 40px;
+        cursor:pointer;
+    }
+    #check{
+        display:none;
+    }
+    @media (max-width:952px){
+        label.logo{
+            font-size:30px;
+            padding-left:50px;
+        }
+        nav ul li a{
+            font-size:16px;
+        }
+    }
+    @media (max-width:858px)
+    {
+        .checkbtn{
+            display:block;
+        }
+        ul{
+            position: fixed;
+            width:100%;
+            height:100vh;
+            background:#2c3e50;
+            top:80px;
+            left:-100%;
+            text-align:center;
+            transition: all .5s;
+        }
+        nav ul li{
+            display:block;
+            margin:50px 0;
+            line-height: 30px;
+        }
+        nav ul li a{
+            font-size:20px;
+
+        }
+        a:hover,a.active{
+            background:none;
+            color:#0082e6;
+        }
+        #check:checked ~ ul{
+            left:0;
+        }
+    }
+    section{
+        background:white;
+        background-size: cover;
+        height: calc(150vh - 80px);
+    }
+    .msg-container{
+        width:600px;
+        height:280px;
+        position:absolute;
+        left:30%;
+        top:45%;
+        transform:translate(-50%);
+        overflow: hidden;
+    }
+#slider{
+    display:inline-flex;
+    transition: .5s;
+}
+.msg-col{
+    width:600px;
+    height:280px;
+
+}
+.msg-col h1{
+    color:#fff;
+    font-size: 80px;
+    font-weight: 100;
+    margin: 10px 0;
+}
+.msg-col p{
+    color:#ddd;
+    font-size:15px;
+    line-height: 25px;
+}
+.msg-col a{
+    display:inline-block;
+    text-decoration: none;
+    color:#555;
+    background: #fff;
+    font-size: 15px;
+    padding:10px 35px;
+    border-radius:30px;
+    margin-top: 25px;
+}
+.controller{
+    width: 1px;
+    height: 320px;
+    display: block;
+    background: #c0c0c0;
+    position: absolute;
+    top:65%;
+    right: 50px;
+    transform: translateY(-50%);
+}
+#line1,#line2,#line3,#line4{
+    height: 80px;
+    width: 10px;
+    cursor:pointer;
+    transform: translateX(-50%);
+}
+#active{
+    width:5px;
+    height:80px;
+    border-radius: 10px;
+    background: #fff;
+    position: absolute;
+    top:0;
+    transform: translateX(-50%);
+    transition: 0.5s;
+
+}
 
 h1 {
     color: black;
