--- a/Reactjs-frontend/src/index.css
+++ b/Reactjs-frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* -------------------------------------------Universal---------------------------------------------------- */
 * {
   margin: 0;
@@ -23,9 +24,7 @@ html {
 }
 
 body {
-  /* font-family: "Poppins", sans-serif; */
-  background-color: rgb(4, 11, 19);
-  /* background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255, 94, 247, 1) 17.8%, rgba(2, 245, 255, 1) 100.2%); */
+  background-color: rgb(255, 255, 255);
 }
 
 section {
@@ -44,7 +43,7 @@ section .title {
   font-weight: bold;
   margin-bottom: 60px;
   padding-bottom: 20px;
-  /* font-family: 'Atkinson Hyperlegible', sans-serif; */
+  font-family: "Be Vietnam Pro", sans-serif;
 }
 
 section .title::before {
