--- a/Reactjs-frontend/src/index.css
+++ b/Reactjs-frontend/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anta&family=Anton&family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bebas+Neue&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Marcellus&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oleo+Script:wght@400;700&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Satisfy&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anta&family=Anton&family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bebas+Neue&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Marcellus&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oleo+Script:wght@400;700&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Satisfy&display=swap");
 /* -------------------------------------------UNIVERSAL---------------------------------------------------- */
 * {
   margin: 0;
@@ -9,16 +9,16 @@
   text-decoration: none;
   list-style: none;
 }
-.general_padding_horizontal_navbar{
-  padding: 1vw 3vw;
+.general_padding_horizontal_navbar {
+  padding: 1vw 9vw;
 }
-.general_padding_horizontal_hero{
+.general_padding_horizontal_hero {
   padding: 1vw 6vw;
 }
-.font{
+.font {
   font-family: "Be Vietnam Pro", sans-serif;
 }
-.font_heading{
+.font_heading {
   font-family: "Oswald", sans-serif;
 }
 html {
@@ -38,10 +38,10 @@ html {
 body {
   background-color: rgb(255, 255, 255);
 }
-.navbar-right .links .active{
+.navbar-right .links .active {
   text-decoration: underline;
-  text-decoration-color: #00FF84;
-  color: #00FF84;
+  text-decoration-color: #00ff84;
+  color: #00ff84;
 }
 section {
   padding: 100px 0;
@@ -69,7 +69,11 @@ section .title::before {
   left: 50%;
   width: 500px;
   height: 5px;
-  background: #0159ED;
-  background: linear-gradient(to right, rgba(255, 94, 247, 1) 17.8%, rgba(2, 245, 255, 1) 100.2%);
+  background: #0159ed;
+  background: linear-gradient(
+    to right,
+    rgba(255, 94, 247, 1) 17.8%,
+    rgba(2, 245, 255, 1) 100.2%
+  );
   transform: translateX(-50%);
 }
