--- a/Reactjs-frontend/src/components/Working/Working.css
+++ b/Reactjs-frontend/src/components/Working/Working.css
@@ -2,7 +2,7 @@
   margin-top: 5vw;
   width: 100%;
   height: 60vh;
-  /* background-color: red; */
+  background-color: red;
 }
 .working_heading {
   width: 100%;
