--- a/Reactjs-frontend/src/components/Management/Management.css
+++ b/Reactjs-frontend/src/components/Management/Management.css
@@ -1,7 +1,6 @@
 .management_main{
     width: 100%;
     min-height: 90vh;
-    background-color: blueviolet;
     margin-top: 3vw;
     padding: 0vw 10vw;
 }
@@ -23,5 +22,39 @@
 .m_elem{
     width:100%;
     height: 50vh;
-    background-color: yellow;
+
+    display: flex;
+    align-items: center;
+}
+.m_elem:nth-child(2){
+    flex-direction: row-reverse;
+}
+.m_left{
+    width: 30%;
+    height: 100%;
+
+}
+.m_left img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.m_right{
+    width: 70%;
+    height: 100%;
+
+    display: flex;align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 0.5vw;
+}
+.m_right h1{
+    text-transform: capitalize;
+    font-size: 3vw;
+}
+.m_right p{
+    font-size: 1.2vw;
+    width: 60%;
+    text-align: center;
+    opacity: 0.7;
 }
