Made contact,login and signup page responsive

--- a/Reactjs-frontend/src/components/Hero/Hero.css
+++ b/Reactjs-frontend/src/components/Hero/Hero.css
@@ -106,3 +106,15 @@
   width: 90%;
   opacity: 0.8;
 }
+/* ----------------------------------- */
+@media (max-width: 1024px) {
+  
+}
+
+@media (max-width: 767px) {
+  
+}
+
+@media (max-width: 480px) {
+  
+}
