--- a/Reactjs-frontend/src/components/Trusted_partner/Trusted.css
+++ b/Reactjs-frontend/src/components/Trusted_partner/Trusted.css
@@ -65,3 +65,15 @@
   width: 60%;
   opacity: 0.7;
 }
+/* ----------------------------------- */
+@media (max-width: 1024px) {
+  
+}
+
+@media (max-width: 767px) {
+  
+}
+
+@media (max-width: 480px) {
+  
+}
