--- a/Reactjs-frontend/src/components/Management/Management.css
+++ b/Reactjs-frontend/src/components/Management/Management.css
@@ -58,3 +58,15 @@
   text-align: center;
   opacity: 0.7;
 }
+/* ----------------------------------- */
+@media (max-width: 1024px) {
+  
+}
+
+@media (max-width: 767px) {
+  
+}
+
+@media (max-width: 480px) {
+  
+}
