--- a/Reactjs-frontend/src/components/Working/Working.css
+++ b/Reactjs-frontend/src/components/Working/Working.css
@@ -58,3 +58,15 @@
   font-size: 1.1vw;
   opacity: 0.7;
 }
+/* ----------------------------------- */
+@media (max-width: 1024px) {
+  
+}
+
+@media (max-width: 767px) {
+  
+}
+
+@media (max-width: 480px) {
+  
+}
