--- a/Reactjs-frontend/src/components/Hero/Hero.css
+++ b/Reactjs-frontend/src/components/Hero/Hero.css
@@ -10,7 +10,6 @@
   width: 50%;
   height: 100%;
   display: flex;
-  /* background-color: red; */
   padding-left: 5vw;
   flex-direction: column;
   justify-content: space-between;
@@ -77,7 +76,7 @@
   gap: 1vw;
 }
 .left-bottom .left {
-    margin-left: -1vw;
+  margin-left: -1vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -108,120 +107,168 @@
 }
 /* ----------------------------------- */
 @media (max-width: 1024px) {
-  
-}
-
-@media (max-width: 767px) {
-  
-}
-
-@media (max-width: 480px) {
   .hero_main {
-    width: 100%;
-    height: 88vh;
-    padding: 1vw 2vw;
-    display: flex;
-    align-items: center;
-    gap: 1vw;
+    gap: 3vw;
   }
   .hero-left {
     width: 50%;
     height: 100%;
-    display: flex;
-    /* background-color: red; */
-    padding-left: 5vw;
-    flex-direction: column;
-    justify-content: space-between;
   }
   .hero-right {
     width: 50%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
   .img-div {
-    width: 37vw;
-    height: 37vw;
-    border-radius: 50%;
-    background-color: white;
-    overflow: hidden;
+    width: 40vw;
+    height: 40vw;
   }
-  .img-div img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+
   .heading {
-    text-transform: uppercase;
-    font-size: 4.5vw;
-    letter-spacing: -0.2vw;
-    opacity: 0.8;
+    margin-top: 10vw;
+    font-size: 5.5vw;
   }
   .left-top {
-    margin-top: 8vw;
-    display: flex;
-    align-items: start;
-    flex-direction: column;
+    margin-top: 0vw;
   }
   .subheading {
     margin-top: -1vw;
     font-size: 1vw;
-    margin-left: 0.5vw;
-    letter-spacing: 0.5vw;
-    opacity: 1;
-    text-transform: uppercase;
   }
   .btn {
-    margin-top: 3vw;
-    padding: 1vw 2vw;
-    background-color: #62b006;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+    margin-top: 2vw;
   }
   .btn h2 {
-    font-size: 1vw;
-    color: white;
-    text-transform: uppercase;
-  }
-  .left-bottom {
-    width: 100%;
-    height: 25vh;
-    display: flex;
-    align-items: center;
-    gap: 1vw;
+    font-size: 1.5vw;
   }
   .left-bottom .left {
-      margin-left: -1vw;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    width: 10%;
-    height: 100%;
+    margin-left: -2vw;
+    margin-top: -6.5vw;
+
+    height: 60%;
   }
-  .icon-1 {
-    height: 50%;
-    width: 30%;
-  }
-  .right {
-    width: 90%;
-    height: 100%;
-    display: flex;
-    align-items: start;
-    flex-direction: column;
-  }
+
   .motive {
     margin-top: 1vw;
-    font-size: 1.2vw;
+    font-size: 1.7vw;
     text-transform: capitalize;
   }
   .para {
     font-size: 0.9vw;
     width: 90%;
     opacity: 0.8;
+  }
+}
+
+@media (max-width: 767px) {
+  .hero_main {
+    gap: 3vw;
+  }
+  .hero-left {
+    width: 50%;
+    height: 100%;
+  }
+  .hero-right {
+    width: 50%;
+    height: 100%;
+  }
+  .img-div {
+    width: 40vw;
+    height: 40vw;
+  }
+
+  .heading {
+    margin-top: 10vw;
+    font-size: 5.5vw;
+  }
+  .left-top {
+    margin-top: 0vw;
+  }
+  .subheading {
+    margin-top: -1vw;
+    font-size: 1vw;
+  }
+  .btn {
+    margin-top: 2vw;
+  }
+  .btn h2 {
+    font-size: 1.5vw;
+  }
+  .left-bottom .left {
+    margin-left: -2vw;
+    margin-top: -6.5vw;
+
+    height: 60%;
+  }
+
+  .motive {
+    margin-top: 1vw;
+    font-size: 1.7vw;
+    text-transform: capitalize;
+  }
+  .para {
+    font-size: 0.9vw;
+    width: 90%;
+    opacity: 0.8;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero_main {
+    gap: 3vw;
+    flex-direction: column-reverse;
+  }
+  .hero-left {
+    width: 100%;
+    align-items: center;
+    padding: 1vw 2vw;
+  }
+  .hero-right {
+    width: 100%;
+    height: 70%;
+  }
+  .img-div {
+    width: 40vw;
+    height: 40vw;
+  }
+
+  .heading {
+    text-transform: uppercase;
+    font-size: 9.5vw;
+    letter-spacing: -0.2vw;
+    opacity: 0.8;
+  }
+  .left-top {
+    margin-top: 0vw;
+  }
+  .subheading {
+    margin-top: -2vw;
+    font-size: 2vw;
+  }
+  .btn {
+    margin-top: 2vw;
+  }
+  .btn h2 {
+    font-size: 2vw;
+  }
+  .left-bottom {
+    flex-direction: column-reverse;
+  }
+  .left-bottom .left {
+    margin-left: -60vw;
+    flex-direction: row;
+    align-items: start;
+    width: 15%;
+  }
+  .icon-1 {
+    height: 50%;
+    width: 10%;
+  }
+
+  .motive {
+    margin-top: 0vw;
+    font-size: 3.2vw;
+  }
+  .para {
+    font-size: 1.5vw;
   }
 }
