--- a/Reactjs-frontend/src/components/Management/Management.css
+++ b/Reactjs-frontend/src/components/Management/Management.css
@@ -60,13 +60,116 @@
 }
 /* ----------------------------------- */
 @media (max-width: 1024px) {
-  
 }
 
 @media (max-width: 767px) {
-  
+  .management_main {
+    margin-top: -10vw;
+  }
+  .management_heading {
+    width: 100%;
+    text-align: center;
+  }
+  .management_heading h1 {
+    text-transform: capitalize;
+    font-size: 3vw;
+  }
+  .content {
+    margin-top: 5vw;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 4vw;
+  }
+  .m_elem {
+    width: 100%;
+    height: 50vh;
+    flex-direction: column;
+    gap: 2vw;
+  }
+  .m_elem:nth-child(2) {
+    flex-direction: column;
+  }
+  .m_left {
+    margin-top: 3vw;
+    width: 70%;
+    height: 70%;
+  }
+  .m_left img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  .m_right {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1.5vw;
+  }
+  .m_right h1 {
+    font-size: 3.5vw;
+  }
+  .m_right p {
+    font-size: 1.75vw;
+    width: 80%;
+  }
 }
 
 @media (max-width: 480px) {
-  
+  .management_main {
+    margin-top: -30vw;
+  }
+  .management_heading {
+    width: 100%;
+    text-align: center;
+  }
+  .management_heading h1 {
+    text-transform: capitalize;
+    font-size: 3vw;
+  }
+  .content {
+    margin-top: 5vw;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 4vw;
+  }
+  .m_elem {
+    width: 100%;
+    height: 50vh;
+    flex-direction: column;
+    gap: 2vw;
+  }
+  .m_elem:nth-child(2) {
+    flex-direction: column;
+  }
+  .m_left {
+    margin-top: 3vw;
+    width: 70%;
+    height: 70%;
+  }
+  .m_left img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  .m_right {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1.5vw;
+  }
+  .m_right h1 {
+    font-size: 4.5vw;
+  }
+  .m_right p {
+    font-size: 2.2vw;
+    width: 80%;
+  }
 }
