--- a/Reactjs-frontend/src/components/Management/Management.css
+++ b/Reactjs-frontend/src/components/Management/Management.css
@@ -4,14 +4,17 @@
   margin-top: 3vw;
   padding: 0vw 10vw;
 }
+
 .management_heading {
   width: 100%;
   text-align: center;
 }
+
 .management_heading h1 {
   text-transform: capitalize;
   font-size: 3vw;
 }
+
 .content {
   margin-top: 5vw;
   width: 100%;
@@ -19,6 +22,7 @@
   flex-direction: column;
   gap: 2vw;
 }
+
 .m_elem {
   width: 100%;
   height: 50vh;
@@ -26,18 +30,22 @@
   display: flex;
   align-items: center;
 }
+
 .m_elem:nth-child(2) {
   flex-direction: row-reverse;
 }
+
 .m_left {
   width: 30%;
   height: 100%;
 }
+
 .m_left img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
 .m_right {
   width: 70%;
   height: 100%;
@@ -48,32 +56,37 @@
   flex-direction: column;
   gap: 0.5vw;
 }
+
 .m_right h1 {
   text-transform: capitalize;
   font-size: 3vw;
 }
+
 .m_right p {
   font-size: 1.2vw;
   width: 60%;
   text-align: center;
   opacity: 0.7;
 }
+
 /* ----------------------------------- */
-@media (max-width: 1024px) {
-}
+@media (max-width: 1024px) {}
 
 @media (max-width: 767px) {
   .management_main {
     margin-top: -10vw;
   }
+
   .management_heading {
     width: 100%;
     text-align: center;
   }
+
   .management_heading h1 {
     text-transform: capitalize;
     font-size: 3vw;
   }
+
   .content {
     margin-top: 5vw;
     width: 100%;
@@ -81,25 +94,30 @@
     flex-direction: column;
     gap: 4vw;
   }
+
   .m_elem {
     width: 100%;
     height: 50vh;
     flex-direction: column;
     gap: 2vw;
   }
+
   .m_elem:nth-child(2) {
     flex-direction: column;
   }
+
   .m_left {
     margin-top: 3vw;
     width: 70%;
     height: 70%;
   }
+
   .m_left img {
     width: 100%;
     height: 100%;
     object-fit: contain;
   }
+
   .m_right {
     width: 70%;
     height: 100%;
@@ -109,9 +127,11 @@
     flex-direction: column;
     gap: 1.5vw;
   }
+
   .m_right h1 {
     font-size: 3.5vw;
   }
+
   .m_right p {
     font-size: 1.75vw;
     width: 80%;
@@ -122,14 +142,17 @@
   .management_main {
     margin-top: -30vw;
   }
+
   .management_heading {
     width: 100%;
     text-align: center;
   }
+
   .management_heading h1 {
     text-transform: capitalize;
-    font-size: 3vw;
+    font-size: 4.5vw;
   }
+
   .content {
     margin-top: 5vw;
     width: 100%;
@@ -137,25 +160,30 @@
     flex-direction: column;
     gap: 4vw;
   }
+
   .m_elem {
     width: 100%;
     height: 50vh;
     flex-direction: column;
     gap: 2vw;
   }
+
   .m_elem:nth-child(2) {
     flex-direction: column;
   }
+
   .m_left {
     margin-top: 3vw;
     width: 70%;
     height: 70%;
   }
+
   .m_left img {
     width: 100%;
     height: 100%;
     object-fit: contain;
   }
+
   .m_right {
     width: 70%;
     height: 100%;
@@ -165,11 +193,13 @@
     flex-direction: column;
     gap: 1.5vw;
   }
+
   .m_right h1 {
     font-size: 4.5vw;
   }
+
   .m_right p {
-    font-size: 2.2vw;
+    font-size: 2.5vw;
     width: 80%;
   }
 }
