--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,31 @@
 
 /* Toggle switch styles */
 input:checked ~ .dot {
-    transform: translateX(100%);
-    background-color: #4CAF50;
+  transform: translateX(100%);
+  background-color: #4caf50;
+}
+
+@layer components {
+  .neon-text {
+    color: #39ff14;
+    text-shadow: 0 0 5px #39ff14, 0 0 10px #39ff14, 0 0 20px #39ff14,
+      0 0 40px #39ff14, 0 0 80px #39ff14, 0 0 90px #39ff14, 0 0 100px #39ff14,
+      0 0 150px #39ff14;
   }
-  
+  .tree {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .trunk {
+    width: 20px;
+    height: 60px;
+  }
+  .leaves {
+    width: 0;
+    height: 0;
+    border-left: 40px solid transparent;
+    border-right: 40px solid transparent;
+    border-bottom: 60px solid #39ff14;
+  }
+}
