--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ input:checked ~ .dot {
   .neon-text {
     color: #39ff14;
     text-shadow: 0 0 5px #39ff14, 0 0 10px #39ff14, 0 0 20px #39ff14,
-      0 0 40px #39ff14, 0 0 80px #39ff14, 0 0 90px #39ff14, 0 0 100px #39ff14,
+      0 0 40px #39ff14, 0 0 80px #14bcff, 0 0 90px #39ff14, 0 0 100px #ff14d8,
       0 0 150px #39ff14;
   }
   .tree {
